# PCA_Exercises

./: CMakeCache.txt  gitignore
ex01/: #results.txt#  CMakeLists.txt  a.out  main  main.cpp  results.txt  slurm-13297.out  slurm-13300.out  slurm-13301.out  slurm-13302.out  slurm-13303.out  slurm-13304.out  slurmscript.sh
ex02/: CMakeLists.txt  main.cpp
ex03/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  result  results.txt  slurm-13909.out
ex04/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ex04  main.cpp  results.txt  slurmscript.sh  slurmscript.sh~
ex05/: CMakeLists.txt  PingExchange  PingExchange.cpp  PingPong  PingPong.cpp  resultsPingExchange_a.txt  resultsPingExchange_b.txt  resultsPingPong_a.txt  resultsPingPong_b.txt  slurm-15463.out  slurm-15464.out  slurmscript.sh
